--- a/PlanIT-frontend/src/app/pages/login/login.component.html
+++ b/PlanIT-frontend/src/app/pages/login/login.component.html
@@ -48,7 +48,7 @@
       <a href="reset.html">Forgot password?</a>
     </div>
     <div class="forgot">
-      <a href="signUp">Don't you have an account? Sign up now!</a>
+      <a href="register">Don't you have an account? Sign up now!</a>
     </div>
   </div>
 </div>
