--- a/PlanIT-frontend/src/app/pages/events/events.component.html
+++ b/PlanIT-frontend/src/app/pages/events/events.component.html
@@ -17,9 +17,15 @@
     </ng-container>
 
     <ng-container matColumnDef="pricePerPerson">
-      <th mat-header-cell *matHeaderCellDef> Price/person</th>
+      <th mat-header-cell *matHeaderCellDef> Total cost</th>
       <td mat-cell *matCellDef="let element"> {{element.cost}}
-        <button mat-button (click)="openDialog(element)">View details</button>
+        <button class ="details-button" mat-button (click)="openDialog(element)">View details</button>
+        <!--<div class = "myInline" *ngIf="subscribed(element)">-->
+          <!--<i class="material-icons">done</i> Subscribed-->
+        <!--</div>-->
+        <!--<div class = "myInline" *ngIf="!subscribed(element)">-->
+          <!--<i class="material-icons">clear</i> Subscribed-->
+        <!--</div>-->
       </td>
     </ng-container>
 
@@ -28,5 +34,13 @@
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-  <mat-checkbox (change)="changeEvents()" [(ngModel)] = "checked">Show only my events</mat-checkbox>
+  <mat-checkbox (change)="changeEventsToCreatedEvents()" [(ngModel)]="checked">Show only events that I created
+  </mat-checkbox>
+  <br>
+  <mat-checkbox (change)="changeEventsToSubscribedEvents()" [(ngModel)]="checked2">Show only events that i subscribed
+    to
+  </mat-checkbox>
+  <br>
+  <button (click)="routeIT()" class="add-button" mat-button>Create a new event</button>
+  <br>
 </div>
