--- a/PlanIT-frontend/src/app/pages/chat/chat.component.css
+++ b/PlanIT-frontend/src/app/pages/chat/chat.component.css
@@ -187,3 +187,65 @@ a.fill-div {
   width: 100%;
   text-decoration: none;
 }
+
+/*
+dropdown
+ */
+
+.dropbtn {
+  background-color: #673ab7;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #3e8e41;
+}
+
+#myInput {
+  box-sizing: border-box;
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+}
+
+#myInput:focus {outline: 3px solid #ddd;}
+
+.dropdown {
+  position: fixed;
+  display: inline-block;
+  padding-top: 5%;
+  padding-left: 2%;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  overflow: auto;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
+
+
+.example-form {
+  padding-left: 2%;
+}
